--- a/Frontend/src/main/webapp/pages/californiatemplate/sidebar.xhtml
+++ b/Frontend/src/main/webapp/pages/californiatemplate/sidebar.xhtml
@@ -37,15 +37,13 @@
                                 icon="pi pi-fw pi-home" outcome="/pages/dashboard/Dashboard"/>
 
                     <p:menuitem id="users" value="Users" icon="pi pi-fw pi-users"
-                                outcome="/pages/users/UsersView"
-                                rendered="#{ (componentRenderer.administrator) }"/>
+                                outcome="/pages/dashboard/Dashboard"/>
 
                     <p:menuitem id="roles" value="Roles" icon="fa fa-wrench"
-                                outcome="/pages/users/RolesView"
-                                rendered="#{ (componentRenderer.administrator) }"/>
+                                outcome="/pages/dashboard/Dashboard"/>
 
                     <p:menuitem id="logout" value="Logout" icon="fa fa-fw fa-sign-out"
-                                url="#{request.contextPath}/ServiceLogout"/>
+                                outcome="/pages/dashboard/Dashboard"/>
                 </pc:menu>
             </h:form>
         </div>
